[package]

name = "cbuild"
version = "0.1.0"
authors = ["Tom", "Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tjpalmer/cbuild-rs"
description = """
For building c and c++ code.
Forked from Alex Crichton's cc-rs project for my own needs.
"""
readme = "README.md"
categories = ["development-tools"]

[dependencies]
rayon = { version = "0.9", optional = true }

[features]
parallel = ["rayon"]

[dev-dependencies]
tempdir = "0.3"
